# BenternetZMQMidi

./: .gitignore  README.md
ResolumeArena/: ZMQBenternet.avc
code/QtProject/MidiZMQClient/: MidiZMQClient.pro  RtMidi.cpp  RtMidi.h  main.cpp
code/QtProject/MidiZMQService/: MidiZMQService.pro  main.cpp
code/QtProject/RtMidi/: CMakeLists.txt  RtMidi.cpp  RtMidiIn.cpp  RtMidiOut.cpp
